fix answer buttons scale shift on active

--- a/frontend/app/components/task-player/styles.css
+++ b/frontend/app/components/task-player/styles.css
@@ -22,7 +22,7 @@
 }
 
 .task-player__option-button:active {
-  font-size: 60px;
+  font-weight: bold;
 }
 
 .task-player__option-button:disabled {
